--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Edward Gan by edgan8</title>
+    <title>Vivek Nair by vivekaxl</title>
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/pygment_trac.css">
@@ -28,19 +28,18 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Edward Gan</h1>
-        <p class="header">PhD Student @ Stanford</p>
-        <p>edgan8@gmail.com, egan1@stanford.edu</p>
+        <h1 class="header">Vivek Nair</h1>
+        <p class="header">PhD Student @ NCState</p>
+        <p>vivekaxl@gmail.com</p>
 
       </header>
       <section>
 
 <h3>About</h3>
-<p>I'm currently a PhD student in computer science at Stanford.
-  Previously a software engineer at Facebook working in Data & Targeting
-  and before that a research assistant in Greg Morrisett's group working on
-  program verification and type system design.
-  My <a href="assets/gan-web-resume.pdf">Resume</a>.</p>
+<p>I'm currently a PhD student in computer science at North Carolina State University.
+  Previously a software engineer intern at Lexisnexis Risk Solutions in Solution and Architecture Team
+  and before that a Software Engineering at Samsung Mobile working in Memory & File System.
+  My <a href="assets/vivek-resume.pdf">Resume</a>.</p>
 
 <h3>Projects</h3>
   <h4>Dataswarm</h4>
