adding hpcc-i-spark

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-41553675-1', 'edgan8.github.io');
+  ga('create', 'UA-41553675-1', 'vivekaxl.github.io');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
 
@@ -42,15 +42,10 @@
   My <a href="assets/vivek-resume.pdf">Resume</a>.</p>
 
 <h3>Projects</h3>
-  <h4>Dataswarm</h4>
+  <h4>HPPC Spark Integrator</h4>
   <p>
-  At Facebook, I worked on the execution engine for
-  running
-  <a href="https://www.youtube.com/watch?v=M0VCbhfQ3HQ">
-  Dataswarm
-  </a>
-  ETL pipelines over historical data, optimized for
-  batch updates and exploratory analysis.
+    At LexisNexis, I worked on the developing a python package, which can be used to import (sampled) data stored in
+    <a href="https://hpccsystems.com/">HPCC</a>  cluster to a local machine. The prototype is available <a href="https://pypi.python.org/pypi/hpcc-i-spark">here</a>.
   </p>
 
   <h4>Clamp</h4>
