--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   My <a href="assets/vivek-resume.pdf">Resume</a>.</p>
 
 <h3>Projects</h3>
-  <h4>HPPC Spark Integrator</h4>
+  <h4>HPCC Spark Integrator</h4>
   <p>
     At LexisNexis, I worked on the developing a python package, which can be used to import (sampled) data stored in
     <a href="https://hpccsystems.com/">HPCC</a>  cluster to a local machine. The prototype is available <a href="https://pypi.python.org/pypi/hpcc-i-spark">here</a>.
