--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
     <a href="https://hpccsystems.com/">HPCC</a>  cluster to a local machine. The prototype is available <a href="https://pypi.python.org/pypi/hpcc-i-spark">here</a>.
   </p>
 
-  <h4>Clamp</h4>
+  <h4>HPCC - Data Science Portal - Machine Learning Plugins</h4>
   <p>
 
-  My <a href="assets/gan-thesis-final-print.pdf">senior thesis</a>
-  involved designing a functional programming language to better manage
-  stateful resources by integrating Type Classes with Substructural
-  Types. There's prototype <a
-    href="https://github.com/edgan8/clampcheck">type checker</a> for
-  the language in Haskell and a
-  <a href="http://arxiv.org/abs/1502.04772">paper</a>
-  from LINEARITY 2014.
+    During Summer'16, I worked on developing machine learning plugins for Data Science Portal (DSP). DSP is a 
+    graphical toolkit, which runs HPCC under the hood. It relieves the users to learn or optimize ECL code and provides 
+    a graphical interface to generate machine learning pipelines. The code required to adapt the code to DSP required 
+    careful porting of the existing ML library. The <a href="https://github.com/hpcc-systems/ecl-ml/pull/255">pull request</a> 
+    is available here. The work was presented at the HPCC summit as a part of the <a href=http://www.slideshare.net/hpccsystems/hpcc-systems-community-day-research-poster-contest-winners>
+    HPCC poster competition</a>. <a href="assets/vivek-hpcc-poster.pdf">Poster</a>.
 
   </p>
+        
+  
 
   <h4>NoteSpace</h4>
   <p>
