--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
     a graphical interface to generate machine learning pipelines. The code required to adapt the code to DSP required 
     careful porting of the existing ML library. The <a href="https://github.com/hpcc-systems/ecl-ml/pull/255">pull request</a> 
     is available here. The work was presented at the HPCC summit as a part of the <a href=http://www.slideshare.net/hpccsystems/hpcc-systems-community-day-research-poster-contest-winners>
-    HPCC poster competition</a>. <a href="assets/vivek-hpcc-poster.pdf">Poster</a>.
+    HPCC poster competition</a>. The copy of the poster is available <a href="assets/vivek-hpcc-poster.pdf">here</a>.
 
   </p>
         
-  
-
   <h4>NoteSpace</h4>
   <p>
 
