--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
   <h4>HPCC Spark Integrator</h4>
   <p>
     At LexisNexis, I worked on the developing a python package, which can be used to import (sampled) data stored in
-    <a href="https://hpccsystems.com/">HPCC</a>  cluster to a local machine. The prototype is available <a href="https://pypi.python.org/pypi/hpcc-i-spark">here</a>.
+    <a href="https://hpccsystems.com/">HPCC</a>  cluster to a local machine. This was achieved using the web services exposed 
+    by the HPCC platform. The prototype is available <a href="https://pypi.python.org/pypi/hpcc-i-spark">here</a>.
   </p>
 
   <h4>HPCC - Data Science Portal - Machine Learning Plugins</h4>
@@ -54,10 +55,19 @@
     During Summer'16, I worked on developing machine learning plugins for Data Science Portal (DSP). DSP is a 
     graphical toolkit, which runs HPCC under the hood. It relieves the users to learn or optimize ECL code and provides 
     a graphical interface to generate machine learning pipelines. The code required to adapt the code to DSP required 
-    careful porting of the existing ML library. The <a href="https://github.com/hpcc-systems/ecl-ml/pull/255">pull request</a> 
-    is available here. The work was presented at the HPCC summit as a part of the <a href=http://www.slideshare.net/hpccsystems/hpcc-systems-community-day-research-poster-contest-winners>
+    careful porting of the existing ML library. The pull request
+    is available <a href="https://github.com/hpcc-systems/ecl-ml/pull/255">here</a>. The work was presented at the HPCC summit as a part of the <a href=http://www.slideshare.net/hpccsystems/hpcc-systems-community-day-research-poster-contest-winners>
     HPCC poster competition</a>. The copy of the poster is available <a href="assets/vivek-hpcc-poster.pdf">here</a>.
 
+  </p>
+  
+  <h4>HPCC - Testing Suite</h4>
+  <p>
+
+    Since, HPCC ML suite was in its nascent stage, I had an opportunity to develop the testing suite for the ML suite. It was
+    particularly a very interesting because I got to learn how to use the macros and functionmacros, 
+    which are indeed very powerful. The pull request can be found <a href="https://github.com/hpcc-systems/ecl-ml/pull/258">here</a>.
+    
   </p>
         
   <h4>NoteSpace</h4>
