--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
   My <a href="assets/vivek-resume.pdf">Resume</a>.</p>
 
 <h3>Projects</h3>
+<h4>Performance Prediction of Configurable System<h4>
+  As a part of my Ph.D., I am exploring ways to easily optimize non-functional properties (e.g. runtime, latency etc.)
+  of highly configurable systems. Techniques like spectral learning and rank based learning is used to learn features 
+  of the configurations.
+  
+<h4>SWAY - {S}ampling {WAY}<h4>
+  This is a joint project with my colleague, <a href="http://ginfung.github.io/">Jianfeng Chen</a>. We wanted to develop
+  fast searching techniques, which can be used to optimize problems rather quickly. We have tried the searchers on various 
+  problems. This has resulted in few publications. <a href="http://link.springer.com/chapter/10.1007/978-3-319-47106-8_7">paper1<a>, 
+  <a href="https://arxiv.org/abs/1608.07617">paper2<a>.
+        
+        
+<h3>Open Source Contributions</h3>
   <h4>HPCC Spark Integrator</h4>
   <p>
     At LexisNexis, I worked on the developing a python package, which can be used to import (sampled) data stored in
