--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
   <p>
   This is a joint project with my colleague, <a href="http://ginfung.github.io/">Jianfeng Chen</a>. We wanted to develop
   fast searching techniques, which can be used to optimize problems rather quickly. We have tried the searchers on various 
-  problems. This has resulted in few publications. <a href="http://link.springer.com/chapter/10.1007/978-3-319-47106-8_7">paper1<a>, 
-  <a href="https://arxiv.org/abs/1608.07617">paper2<a>.
-  <\p>      
+  problems. This has resulted in few publications. <a href="http://link.springer.com/chapter/10.1007/978-3-319-47106-8_7">paper1</a>, 
+  <a href="https://arxiv.org/abs/1608.07617">paper2</a>.
+  </p>      
         
 <h3>Open Source Contributions</h3>
   <h4>HPCC Spark Integrator</h4>
