--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <p>
   As a part of my Ph.D., I am exploring ways to easily optimize non-functional properties (e.g. runtime, latency etc.)
   of highly configurable systems. Techniques like spectral learning and rank based learning is used to learn features 
-  of the configurations.
+    of the configurations.<a href="https://arxiv.org/abs/1701.08106">paper1</a>
   </p>
   
 <h4>SWAY - {S}ampling {WAY}</h4>
@@ -54,7 +54,7 @@
   This is a joint project with my colleague, <a href="http://ginfung.github.io/">Jianfeng Chen</a>. We wanted to develop
   fast searching techniques, which can be used to optimize problems rather quickly. We have tried the searchers on various 
   problems. This has resulted in few publications. <a href="http://link.springer.com/chapter/10.1007/978-3-319-47106-8_7">paper1</a>, 
-  <a href="https://arxiv.org/abs/1608.07617">paper2</a>.
+  <a href="https://arxiv.org/abs/1608.07617">paper2</a>, <a href="https://arxiv.org/abs/1701.07950">paper3</a>.
   </p>      
         
 <h3>Open Source Contributions</h3>
