--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section>
 
 <h3>About</h3>
-<p>I'm currently a PhD student in computer science at North Carolina State University. My advisor is <a href=http://menzies.us/>Dr. Tim Menzies</a>
+<p>I'm currently a PhD student in computer science at North Carolina State University. My advisor is <a href=http://menzies.us>Dr. Tim Menzies</a>
   Previously a software engineer intern at Lexisnexis Risk Solutions in Solution and Architecture Team
   and before that a Software Engineering at Samsung Mobile working in Memory & File System.
   My <a href="assets/vivek-resume.pdf">Resume</a>.</p>
