--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
         <p class="header">PhD Student @ NCState</p>
         <p>vivekaxl@gmail.com</p>
         <ul>
-            <li><a href="https://twitter.com/IAmAru" title="Twitter"><i class="icon-twitter"></i><span class="label">twitter</span></a></li>
-            <li><a href="https://github.com/arusahni" title="Github"><i class="icon-github"></i><span class="label">github</span></a></li>
-            <li><a href="https://plus.google.com/106780152352450272697" title="Google+"><i class="icon-google-plus"></i><span class="label">google+</span></a></li>
+            <li><a href="https://twitter.com/vivekaxl" title="Twitter"><i class="icon-twitter"></i><span class="label">twitter</span></a></li>
+            <li><a href="https://github.com/vivekaxl" title="Github"><i class="icon-github"></i><span class="label">github</span></a></li>
         </ul>
       </header>
       <section>
