--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <p class="header">PhD Student @ NCState</p>
         <p>vivekaxl@gmail.com</p>
       </header>
+      <section class="social">
+        <ul>
+            <li><a href="https://twitter.com/vivekaxl" title="Twitter"><i class="icon-twitter"></i><span class="label">twitter</span></a></li>
+            <li><a href="https://github.com/vivekaxl" title="Github"><i class="icon-github"></i><span class="label">github</span></a></li>
+        </ul>
+      </section>
       <section>
 
 <h3>About</h3>
