--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <p>
   As a part of my Ph.D., I am exploring ways to easily optimize non-functional properties (e.g. runtime, latency etc.)
   of highly configurable systems. Techniques like spectral learning and rank based learning is used to learn features 
-    of the configurations. <a href="https://arxiv.org/abs/1701.08106">paper1</a>
+    of the configurations. <a href="https://arxiv.org/abs/1701.08106">paper1</a>, <a href="https://arxiv.org/pdf/1702.05701.pdf">paper2</a>.
   </p>
   
 <h4>SWAY - {S}ampling {WAY}</h4>
