--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
     </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-
+<a title="Web Statistics" href="http://clicky.com/101037982"><img alt="Web Statistics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(101037982); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101037982ns.gif" /></p></noscript>
   </body>
 </html>
