--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <section>
 
 <h3>About</h3>
-<p>I'm currently a PhD student in computer science at North Carolina State University. 
+<p>I'm currently a Ph.D. student in computer science at North Carolina State University. 
   My advisor is <a href="http://menzies.us">Dr. Tim Menzies</a>.
   Previously a software engineer intern at Lexisnexis Risk Solutions in Solution and Architecture Team
   and before that a Software Engineering at Samsung Mobile working in Memory & File System.
@@ -88,6 +88,15 @@
   </p>
 
 <h3>Random</h3>
+  <h4>Talks</h4>
+  <ul>
+  <li><a href="assests/Frugal.pdf">Frugal: Cheaper Methods for SBSE (Qualifier Exam)</a></li>
+  <li><a href="assests/AdvancedAnalytics.pdf">Tutorial in Advanced Analystics (SWAN-2017)</a></li>
+  <li><a href="assests/UsingBadLearnerstofindGoodConfiguration.pdf">Using Bad Learners to find Good Configuration (FSE-2017)</a></li>
+</ul>
+      
+
+
   <h4>Storm</h4>
   <p>
   A naive stab at extending a framework, JMOO - originally developed by <a href=https://www.linkedin.com/in/joseph-krall> Joe Krall </a>. 
