--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 <h3>Random</h3>
   <h4>Talks</h4>
   <ul>
-  <li><a href="assets/Frugal.pdf">Frugal: Cheaper Methods for SBSE (Qualifier Exam)</a></li>
-  <li><a href="assets/AdvancedAnalytics.pdf">Tutorial in Advanced Analystics (SWAN-2017)</a></li>
-  <li><a href="assets/UsingBadLearnerstofindGoodConfiguration.pdf">Using Bad Learners to find Good Configuration (FSE-2017)</a></li>
+  <li><a href="https://vivekaxl.github.io/assets/Frugal.pdf">Frugal: Cheaper Methods for SBSE (Qualifier Exam)</a></li>
+  <li><a href="https://vivekaxl.github.io/assets/AdvancedAnalytics.pdf">Tutorial in Advanced Analystics (SWAN-2017)</a></li>
+  <li><a href="https://vivekaxl.github.io/assets/UsingBadLearnerstofindGoodConfiguration.pdf">Using Bad Learners to find Good Configuration (FSE-2017)</a></li>
 </ul>
       
 
