--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   This is a joint project with my colleague, <a href="http://ginfung.github.io/">Jianfeng Chen</a>. We wanted to develop
   fast searching techniques, which can be used to optimize problems rather quickly. We have tried the searchers on various 
   problems. This has resulted in few publications. <a href="http://link.springer.com/chapter/10.1007/978-3-319-47106-8_7">paper1</a>, 
-  <a href="https://arxiv.org/abs/1608.07617">paper2</a>, <a href="https://128.84.21.199/abs/1705.05018">paper3</a>.
+  <a href="https://arxiv.org/abs/1608.07617">paper2</a>, <a href="https://arxiv.org/pdf/1701.07950.pdf">paper3</a>.
   </p>      
         
 <h3>Open Source Contributions</h3>
