--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>I'm currently a Ph.D. student in computer science at North Carolina State University. 
   My advisor is <a href="http://menzies.us">Dr. Tim Menzies</a>.
   Previously a software engineer intern at Lexisnexis Risk Solutions in Solution and Architecture Team
-  and before that a Software Engineering at Samsung Mobile working in Memory & File System.
+  and before that a Software Engineer at Samsung Mobile working in Memory & File System.
   My <a href="assets/vivek-resume.pdf">Resume</a>.</p>
 
 <h3>Projects</h3>
