--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <header>
         <h1 class="header">Vivek Nair</h1>
         <p class="header">PhD Student @ NCState</p>
-        <p>vivekaxl@gmail.com</p>
+        <p><a href="http://scr.im/vivekaxl">email</a></p>
       </header>
       <section>
 
