--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
     of the configurations. <a href="https://arxiv.org/abs/1701.08106">paper1</a>, 
     <a href="https://arxiv.org/pdf/1702.05701.pdf">paper2</a>, <a href="https://arxiv.org/abs/1705.05018">paper3</a>.
   </p>
+
+<h4>Finding Best Cloud Configuration for a given Software System</h4>
+  <p>
+  This is a joint project with my colleague, <a href="http://kmweb.info//">Chin-Jung Hsu</a>. We wanted to develop
+  fast searching techniques, which are efficient, effective and robust, to find the best configuration in the cloud. 
+  The methods proposed uses ow-level performance metrics to predict resource requirements which can be then used to 
+  eliminate `less promising' configurations and hence searches only the spotlight region of the configuration space.
+    
+  <a href="http://tiny.cc/vivek_2018a">Arrow</a>, <a href="https://tiny.cc/vivek_2018d">Scout</a>, <a href="https://tiny.cc/vivek_2018e">Micky</a>.
+  </p>  
   
 <h4>SWAY - {S}ampling {WAY}</h4>
   <p>
