--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <p>
   This is a joint project with my colleague, <a href="http://kmweb.info//">Chin-Jung Hsu</a>. We wanted to develop
   fast searching techniques, which are efficient, effective and robust, to find the best configuration in the cloud. 
-  The methods proposed uses ow-level performance metrics to predict resource requirements which can be then used to 
+  The methods proposed uses low-level performance metrics to predict resource requirements which can be then used to 
   eliminate `less promising' configurations and hence searches only the spotlight region of the configuration space.
     
   <a href="http://tiny.cc/vivek_2018a">Arrow</a>, <a href="https://tiny.cc/vivek_2018d">Scout</a>, <a href="https://tiny.cc/vivek_2018e">Micky</a>.
