--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Vivek Nair</h1>
-        <p class="header">PhD Student @ NCState</p>
+        <p class="header">Ph.D.</p>
+        <p class="header">NCSU</p>
         <p><b><a href="http://scr.im/vivekaxl">E-mail</a></b></p>
       </header>
       <section>
