--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
   The methods proposed uses low-level performance metrics to predict resource requirements which can be then used to 
   eliminate `less promising' configurations and hence searches only the spotlight region of the configuration space.
     
-  <a href="http://tiny.cc/vivek_2018a">Arrow</a>, <a href="https://tiny.cc/vivek_2018d">Scout</a>, <a href="https://tiny.cc/vivek_2018e">Micky</a>.
+  * <a href="http://tiny.cc/vivek_2018a">Arrow</a>
+  * <a href="https://tiny.cc/vivek_2018d">Scout</a>
+  * <a href="https://tiny.cc/vivek_2018e">Micky</a>.
   </p>  
   
 <h4>SWAY - {S}ampling {WAY}</h4>
