--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   eliminate `less promising' configurations and hence searches only the spotlight region of the configuration space.
     
     <ul>
-      <li><a href="http://tiny.cc/vivek_2018a">Arrow</a></li>
-      <li><a href="https://tiny.cc/vivek_2018d">Scout</a></li>
-      <li><a href="https://tiny.cc/vivek_2018e">Micky</a></li>
+      <li><a href="http://tiny.cc/vivek_2018a">Chin-Jung Hsu, <b>Vivek Nair</b>, Vincent W. Freeh, Tim Menzies.Low-Level Augmented Bayesian Optimization for Finding theBest Cloud VM. ICDCS 2018;</a></li>
+      <li><a href="https://tiny.cc/vivek_2018d">Chin-Jung Hsu, <b>Vivek Nair</b>, Tim Menzies, and Vincent W. Freeh. "Scout: An Experienced Guide to Find the Best Cloud Configuration." (Submitted 2018).</a></li>
+      <li><a href="https://tiny.cc/vivek_2018e">Chin-Jung Hsu*, <b>Vivek Nair*</b>, Vincent W. Freeh, Tim Menzies.Micky:  A  Cheaper  Alternative  for  Selecting  Cloud  Instances.IEEE CLOUD 2018</a></li>
     </ul>
   </p>  
   
