--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
 <h4>Performance Prediction of Configurable System</h4>
   <p>
   As a part of my Ph.D., I am exploring ways to easily optimize non-functional properties (e.g. runtime, latency etc.)
-  of highly configurable systems. Techniques like spectral learning and rank based learning is used to learn features 
-    of the configurations. <a href="https://arxiv.org/abs/1701.08106">paper1</a>, 
-    <a href="https://arxiv.org/pdf/1702.05701.pdf">paper2</a>, <a href="https://arxiv.org/abs/1705.05018">paper3</a>.
+  of highly configurable systems. Techniques like spectral learning and rank based learning is used to learn features of the configurations. 
+  <ul> 
+    <li> Vivek Nair, Rahul Krishna, Tim Menzies, Pooyan Jamshidi. <a href="https://arxiv.org/pdf/1803.03900">Transfer Learning with Bellwethers to find Good Configurations.</a> (Submitted 2018)</li>
+    <li> Vivek Nair, Zhe Yu, Tim Menzies, Norbert Seigmund, Sven Apel.<a href="https://arxiv.org/abs/1705.05018">Finding Faster Configurations using FLASH.</a> (Submitted 2018). </li>
+    <li> Vivek Nair, Tim Menzies, Norbert Seigmund, Sven Apel.<a href="https://arxiv.org/pdf/1702.05701.pdf">Using Bad Learners to find Good Configurationsi</a> FSE 2018. </li>
+    <li> Vivek Nair, Zhe Yu, Tim Menzies, Norbert Seigmund, Sven Apel.<a href="https://arxiv.org/abs/1701.08106">Faster  Discovery  of  Faster  System  Configurations  with  Spectral Learning</a> ASE 2017. </li>
+  </ul
   </p>
 
 <h4>Finding Best Cloud Configuration for a given Software System</h4>
@@ -69,9 +73,17 @@
   <p>
   This is a joint project with my colleague, <a href="http://ginfung.github.io/">Jianfeng Chen</a>. We wanted to develop
   fast searching techniques, which can be used to optimize problems rather quickly. We have tried the searchers on various 
-  problems. This has resulted in few publications. <a href="http://link.springer.com/chapter/10.1007/978-3-319-47106-8_7">paper1</a>, 
-  <a href="https://arxiv.org/abs/1608.07617">paper2</a>, <a href="https://arxiv.org/pdf/1701.07950.pdf">paper3</a>.
-  </p>      
+  problems. This has resulted in few publications. 
+  <ul>  
+    <li> Vivek Nair, Tim Menzies,Jianfeng Chen <a href="http://link.springer.com/chapter/10.1007/978-3-319-47106-8_7">An (Accidental) Exploration of Alternatives to Evolutionary Algorithms for SBSE</a> SSBSE 2016.</li>
+    <li> Jianfeng Chen, Vivek Nair, Rahul Krishna, Tim Menzies<a href="https://arxiv.org/abs/1608.07617">Beyond Evolutionary Algorithms for Search-based Software Engineering</a>, IST 2017. </li>
+    <li> Jianfeng Chen, Vivek Nair, Rahul Krishna, Tim Menzies<a href="https://arxiv.org/pdf/1701.07950.pdf">" Sampling" as a Baseline Optimizer for Search-based Software Engineering</a>. TSE 2018. </li>
+  </ul>  
+ <h4>Miscellaneous</h4>
+ <ul>
+   <li>Wei Fu, Vivek Nair, Tim Menzies <a href="https://arxiv.org/pdf/1609.02613">Why is Differential Evolution Better than Grid Search for Tuning Defect Predictors?</a> (Submitted 2018)</li>
+   <li>Vivek Nair, Amritanshu Agrawal, Jianfeng Chen, Wei Fu, George Mathew, Tim Menzies, Leandro Minku, Markus Wagner, Zhe Yu. <a href="https://arxiv.org/pdf/1801.10241">Data-Driven Search-based Software Engineering.</a> (MSR 2018)</li>
+ </ul>
         
 <h3>Open Source Contributions</h3>
   <h4>HPCC Spark Integrator</h4>
