--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
  <h4>Miscellaneous</h4>
  <ul>
    <li>Wei Fu, Vivek Nair, Tim Menzies <a href="https://arxiv.org/pdf/1609.02613">Why is Differential Evolution Better than Grid Search for Tuning Defect Predictors?</a> (Submitted 2018)</li>
-   <li>Vivek Nair, Amritanshu Agrawal, Jianfeng Chen, Wei Fu, George Mathew, Tim Menzies, Leandro Minku, Markus Wagner, Zhe Yu. <a href="https://arxiv.org/pdf/1801.10241">Data-Driven Search-based Software Engineering.</a> (MSR 2018)</li>
+   <li>Vivek Nair, Amritanshu Agrawal, Jianfeng Chen, Wei Fu, George Mathew, Tim Menzies, Leandro Minku, Markus Wagner, Zhe Yu. <a href="https://arxiv.org/pdf/1801.10241">Data-Driven Search-based Software Engineering.</a> MSR 2018</li>
  </ul>
         
 <h3>Open Source Contributions</h3>
