--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Vivek Nair</h1>
-        <p class="header">Ph.D.</p>
+        <p class="header">Ph.D. Candidate</p>
         <p class="header">NCSU</p>
         <p><b><a href="http://scr.im/vivekaxl">E-mail</a></b></p>
       </header>
