--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Vivek Nair by vivekaxl</title>
+    <title>Vivek Nair@NCSU</title>
     
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/pygment_trac.css">
@@ -37,11 +37,13 @@
       <section>
 
 <h3>About</h3>
-<p>I'm currently a Ph.D. student in computer science at North Carolina State University. 
+<p>I'm a Ph.D. student in the Department of Computer Science at North Carolina State University. 
   My advisor is <a href="http://menzies.us">Dr. Tim Menzies</a>.
   Previously a software engineer intern at Lexisnexis Risk Solutions in Solution and Architecture Team
   and before that a Software Engineer at Samsung Mobile working in Memory & File System.
   My <a href="assets/vivek-resume.pdf">Resume</a>.</p>
+
+        <p align=center><font color="red">This summer I am a Research Intern at Microsoft, Redmond.</font>></p>
 
 <h3>Projects</h3>
 <h4>Performance Prediction of Configurable System</h4>
