--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   and before that a Software Engineer at Samsung Mobile working in Memory & File System.
   My <a href="assets/vivek-resume.pdf">Resume</a>.</p>
 
-        <p align=center><font color="red">This summer I am a Research Intern at Microsoft, Redmond.</font>></p>
+        <p align=center><font color="red">This summer I am a Research Intern at Microsoft, Redmond.</font></p>
 
 <h3>Projects</h3>
 <h4>Performance Prediction of Configurable System</h4>
