--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   My advisor is <a href="http://menzies.us">Dr. Tim Menzies</a>.
   Previously a software engineer intern at Lexisnexis Risk Solutions in Solution and Architecture Team
   and before that a Software Engineer at Samsung Mobile working in Memory & File System.
-  My <a href="assets/vivek-resume.pdf">Resume</a>.</p>
+  My <a href="assets/VivekNair-Resume.pdf">Resume</a>.</p>
 
         <p align=center><font color="red">This summer I am a Research Intern at Microsoft, Redmond.</font></p>
 
