--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h3>About</h3>
 <p>I'm a Ph.D. student in the Department of Computer Science at North Carolina State University. 
   My advisor is <a href="http://menzies.us">Dr. Tim Menzies</a>.
-  Previously a software engineer intern at Lexisnexis Risk Solutions in Solution and Architecture Team
+  Previously a Reseach Intern at Microsoft Research, a Software Engineering Intern at Lexisnexis Risk Solutions in Solution and Architecture Team
   and before that a Software Engineer at Samsung Mobile working in Memory & File System.
   My <a href="assets/VivekNair-Resume.pdf">Resume</a>.</p>
 
