--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   of highly configurable systems. Techniques like spectral learning and rank based learning is used to learn features of the configurations. 
   <ul> 
     <li> Vivek Nair, R. Krishna, T. Menzies, P. Jamshidi. <a href="https://arxiv.org/pdf/1803.03900">Transfer Learning with Bellwethers to find Good Configurations.</a> (Submitted 2018)</li>
-    <li> Vivek Nair, Z. Yu, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/abs/1705.05018">Finding Faster Configurations using FLASH.</a> (Submitted 2018). </li>
+    <li> Vivek Nair, Z. Yu, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/abs/1705.05018">Finding Faster Configurations using FLASH.</a> TSE 2018. </li>
     <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel.<a href="https://arxiv.org/pdf/1702.05701.pdf">Using Bad Learners to find Good Configurationsi</a> FSE 2018. </li>
     <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel.<a href="https://arxiv.org/abs/1701.08106">Faster  Discovery  of  Faster  System  Configurations  with  Spectral Learning</a> ASE 2017. </li>
   </ul
