--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!doctype html>
+
+<head> 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta content="en-us" http-equiv="Content-Language">
+	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+  <meta name="description" content="Web site for Vivek Nair, North Carolina State University">
+  <meta name="author" content="Vivek Nair">
+  <meta name="keywords" content="university, research,software engineering, Bayesian Optimization, Hyperparameter optimization, optimization, data mining, Performance Optimization, Software System">
+	<title>Vivek Nair NC State</title> 
+</head> 
+
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -32,7 +44,7 @@
         <h1 class="header">Vivek Nair</h1>
         <p class="header">Ph.D. Candidate</p>
         <p class="header">NCSU</p>
-        <p><b><a href="http://scr.im/vivekaxl">E-mail</a></b></p>
+        <p><b><a href="mailto:wfu@ncsu.edu">Email</a></b></p>
       </header>
       <section>
 
