--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1 class="header">Vivek Nair</h1>
         <p class="header">Ph.D. Candidate</p>
         <p class="header">NCSU</p>
-        <p><b><a href="mailto:wfu@ncsu.edu">Email</a></b></p>
+        <p><b><a href="mailto:vivekaxl@gmail.com">Email</a></b></p>
       </header>
       <section>
 
