--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
       <section>
 
 <h3>About</h3>
-<p>I'm a Ph.D. student in the Department of Computer Science at North Carolina State University. 
-  My advisor is <a href="http://menzies.us">Dr. Tim Menzies</a>.
+<p>I was a Ph.D. student in the Department of Computer Science at North Carolina State University. 
+  My advisor was <a href="http://menzies.us">Dr. Tim Menzies</a>.
   Previously a Reseach Intern at Microsoft Research, a Software Engineering Intern at Lexisnexis Risk Solutions in Solution and Architecture Team
   and before that a Software Engineer at Samsung Mobile working in Memory & File System.
   My <a href="assets/VivekNair-Resume.pdf">Resume</a>.</p>
+	      <p style="text-align: center;">
+		      I will be joining Facebook as a Research Scientist in 2019.</p>
 
 <h3>Projects</h3>
 <h4>Performance Prediction of Configurable System</h4>
