--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Web site for Vivek Nair, North Carolina State University">
   <meta name="author" content="Vivek Nair">
   <meta name="keywords" content="university, research,software engineering, Bayesian Optimization, Hyperparameter optimization, optimization, data mining, Performance Optimization, Software System">
-	<title>Vivek Nair NC State</title> 
+	<title>Vivek Nair</title> 
 </head> 
 
 <!DOCTYPE html>
