--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
 <h3>Random</h3>
   <h4>Talks</h4>
   <ul>
+  <li><a href="assets/vivek-final-defense-ppt.pdf">Frugal Ways of Finding “Good” Configurations (Final Exam)</a></li>
   <li><a href="assets/Frugal.pdf">Frugal: Cheaper Methods for SBSE (Qualifier Exam)</a></li>
-  <li><a href="assets/AdvancedAnalytics.pdf">Tutorial in Advanced Analystics (SWAN-2017)</a></li>
+  <li><a href="assets/AdvancedAnalytics.pdf">Tutorial in Advanced Analytics (SWAN-2017)</a></li>
   <li><a href="assets/UsingBadLearnerstofindGoodConfiguration.pdf">Using Bad Learners to find Good Configuration (FSE-2017)</a></li>
 </ul>
       
