--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   eliminate `less promising' configurations and hence searches only the spotlight region of the configuration space.
     
     <ul>
-      <li> C.J. Hsu, <b>Vivek Nair</b>, V. W. Freeh, Tim Menzies. <a href="http://tiny.cc/vivek_2018a">Low-Level Augmented Bayesian Optimization for Finding theBest Cloud VM.</a> ICDCS 2018.</li>
+      <li> C.J. Hsu, <b>Vivek Nair</b>, V. W. Freeh, T. Menzies. <a href="http://tiny.cc/vivek_2018a">Low-Level Augmented Bayesian Optimization for Finding theBest Cloud VM.</a> ICDCS 2018.</li>
       <li> C.J. Hsu, <b>Vivek Nair</b>, T. Menzies, and V. W. Freeh. <a href="https://tiny.cc/vivek_2018d">Scout: An Experienced Guide to Find the Best Cloud Configuration.</a> (Submitted 2018).</li>
       <li> C.J. Hsu*, <b>Vivek Nair*</b>, V. W. Freeh, T. Menzies. <a href="https://tiny.cc/vivek_2018e"> Micky:  A  Cheaper  Alternative  for  Selecting  Cloud  Instances.</a> IEEE CLOUD 2018.</li>
     </ul>
