--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
   As a part of my Ph.D., I am exploring ways to easily optimize non-functional properties (e.g. runtime, latency etc.)
   of highly configurable systems. Techniques like spectral learning and rank based learning is used to learn features of the configurations. 
   <ul> 
-    <li> Vivek Nair, R. Krishna, T. Menzies, P. Jamshidi. <a href="https://arxiv.org/pdf/1803.03900">Transfer Learning with Bellwethers to find Good Configurations.</a> (Submitted 2018)</li>
-    <li> Vivek Nair, Z. Yu, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/abs/1705.05018">Finding Faster Configurations using FLASH.</a> TSE 2018. </li>
-    <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel.<a href="https://arxiv.org/pdf/1702.05701.pdf">Using Bad Learners to find Good Configurationsi</a> FSE 2018. </li>
-    <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel.<a href="https://arxiv.org/abs/1701.08106">Faster  Discovery  of  Faster  System  Configurations  with  Spectral Learning</a> ASE 2017. </li>
+    <li> Vivek Nair, R. Krishna, T. Menzies, P. Jamshidi. <a href="https://arxiv.org/pdf/1803.03900" style="font-size:15px;">Transfer Learning with Bellwethers to find Good Configurations.</a> (Submitted 2018)</li>
+    <li> Vivek Nair, Z. Yu, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/abs/1705.05018" style="font-size:15px;">Finding Faster Configurations using FLASH.</a> TSE 2018. </li>
+    <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel.<a href="https://arxiv.org/pdf/1702.05701.pdf" style="font-size:15px;">Using Bad Learners to find Good Configurationsi</a> FSE 2018. </li>
+    <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel.<a href="https://arxiv.org/abs/1701.08106" style="font-size:15px;">Faster  Discovery  of  Faster  System  Configurations  with  Spectral Learning</a> ASE 2017. </li>
   </ul
   </p>
 
@@ -76,9 +76,9 @@
   eliminate `less promising' configurations and hence searches only the spotlight region of the configuration space.
     
     <ul>
-      <li> C.J. Hsu, <b>Vivek Nair</b>, V. W. Freeh, T. Menzies. <a href="http://tiny.cc/vivek_2018a">Low-Level Augmented Bayesian Optimization for Finding theBest Cloud VM.</a> ICDCS 2018.</li>
-      <li> C.J. Hsu, <b>Vivek Nair</b>, T. Menzies, and V. W. Freeh. <a href="https://tiny.cc/vivek_2018d">Scout: An Experienced Guide to Find the Best Cloud Configuration.</a> (Submitted 2018).</li>
-      <li> C.J. Hsu*, <b>Vivek Nair*</b>, V. W. Freeh, T. Menzies. <a href="https://tiny.cc/vivek_2018e"> Micky:  A  Cheaper  Alternative  for  Selecting  Cloud  Instances.</a> IEEE CLOUD 2018.</li>
+      <li> C.J. Hsu, <b>Vivek Nair</b>, V. W. Freeh, T. Menzies. <a href="http://tiny.cc/vivek_2018a" style="font-size:15px;">Low-Level Augmented Bayesian Optimization for Finding theBest Cloud VM.</a> ICDCS 2018.</li>
+      <li> C.J. Hsu, <b>Vivek Nair</b>, T. Menzies, and V. W. Freeh. <a href="https://tiny.cc/vivek_2018d" style="font-size:15px;">Scout: An Experienced Guide to Find the Best Cloud Configuration.</a> (Submitted 2018).</li>
+      <li> C.J. Hsu*, <b>Vivek Nair*</b>, V. W. Freeh, T. Menzies. <a href="https://tiny.cc/vivek_2018e" style="font-size:15px;"> Micky:  A  Cheaper  Alternative  for  Selecting  Cloud  Instances.</a> IEEE CLOUD 2018.</li>
     </ul>
   </p>  
   
@@ -88,15 +88,15 @@
   fast searching techniques, which can be used to optimize problems rather quickly. We have tried the searchers on various 
   problems. This has resulted in few publications. 
   <ul>  
-    <li> Vivek Nair, T. Menzies,J. Chen. <a href="http://link.springer.com/chapter/10.1007/978-3-319-47106-8_7">An (Accidental) Exploration of Alternatives to Evolutionary Algorithms for SBSE</a> SSBSE 2016.</li>
-    <li> J. Chen, Vivek Nair, T. Menzies. <a href="https://arxiv.org/abs/1608.07617">Beyond Evolutionary Algorithms for Search-based Software Engineering</a>, IST 2017. </li>
-    <li> J. Chen, Vivek Nair, Rahul Krishna, T. Menzies. <a href="https://arxiv.org/pdf/1701.07950.pdf">" Sampling" as a Baseline Optimizer for Search-based Software Engineering</a>. TSE 2018. </li>
+    <li> Vivek Nair, T. Menzies,J. Chen. <a href="http://link.springer.com/chapter/10.1007/978-3-319-47106-8_7" style="font-size:15px;">An (Accidental) Exploration of Alternatives to Evolutionary Algorithms for SBSE</a> SSBSE 2016.</li>
+    <li> J. Chen, Vivek Nair, T. Menzies. <a href="https://arxiv.org/abs/1608.07617" style="font-size:15px;">Beyond Evolutionary Algorithms for Search-based Software Engineering</a>, IST 2017. </li>
+    <li> J. Chen, Vivek Nair, Rahul Krishna, T. Menzies. <a href="https://arxiv.org/pdf/1701.07950.pdf" style="font-size:15px;">" Sampling" as a Baseline Optimizer for Search-based Software Engineering</a>. TSE 2018. </li>
   </ul>  
  <h4>Miscellaneous</h4>
  <ul>
-   <li>W. Fu, Vivek Nair, T. Menzies. <a href="https://arxiv.org/pdf/1609.02613">Why is Differential Evolution Better than Grid Search for Tuning Defect Predictors?</a> (Submitted 2018)</li>
+   <li>W. Fu, Vivek Nair, T. Menzies. <a href="https://arxiv.org/pdf/1609.02613" style="font-size:15px;">Why is Differential Evolution Better than Grid Search for Tuning Defect Predictors?</a> (Submitted 2018)</li>
    <li>Vivek Nair, A. Agrawal, J. Chen, W. Fu, G. Mathew, T. Menzies, L. Minku, M. Wagner, Z. Yu. <a href="https://arxiv.org/pdf/1801.10241">Data-Driven Search-based Software Engineering.</a> MSR 2018</li>
-   <li>Huy Tu, Vivek Nair. <a href="https://arxiv.org/pdf/1807.11112.pdf">Is One Hyperparameter Optimizer Enough?</a>. SWAN 2018 </li>
+   <li>Huy Tu, Vivek Nair. <a href="https://arxiv.org/pdf/1807.11112.pdf" style="font-size:15px;">Is One Hyperparameter Optimizer Enough?</a>. SWAN 2018 </li>
  </ul>
         
 <h3>Open Source Contributions</h3>
