--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Vivek Nair</h1>
-        <p><b><a href="mailto:vivekaxl@gmail.com">Email</a></b></p>
+        <p style="color:#66D9EF">vivekaxl@gmail.com</p>
       </header>
       <section>
 
