--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       <section>
 
 <h3>About</h3>
-<p>I was a Ph.D. student in the Department of Computer Science at North Carolina State University. 
+<p>I received my Ph.D. in Computer Science from North Carolina State University in 2018. 
   My advisor was <a href="http://menzies.us">Dr. Tim Menzies</a>.
-  Previously a Reseach Intern at Microsoft Research, a Software Engineering Intern at Lexisnexis Risk Solutions in Solution and Architecture Team
-  and before that a Software Engineer at Samsung Mobile working in Memory & File System.
+  I was previously a Reseach Intern at Microsoft Research, and Lexisnexis Risk Solutions.
+	Before that a Software Engineer at Samsung Mobile working in Memory & File System.
   My <a href="assets/VivekNair-Resume.pdf">Resume</a>.</p>
 	      <p style="text-align: center;">
 		      I will be joining Facebook as a Research Scientist in 2019.</p>
