--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
       <section>
 
 <h3>About</h3>
-<p>I received my Ph.D. in Computer Science from North Carolina State University in 2018. 
-  My advisor was <a href="http://menzies.us">Dr. Tim Menzies</a>.
+<p>I received my Ph.D. in Computer Science from North Carolina State University in 2018, where 
+	<a href="http://menzies.us">Dr. Tim Menzies</a> was my advisor.
   I was previously a Reseach Intern at Microsoft Research, and Lexisnexis Risk Solutions.
 	Before that a Software Engineer at Samsung Mobile working in Memory & File System.
   My <a href="assets/VivekNair-Resume.pdf">Resume</a>.</p>
-	      <p style="text-align: center;">
+	      <p style="text-align: center; color: #F92672">
 		      I will be joining Facebook as a Research Scientist in 2019.</p>
 
 <h3>Projects</h3>
