--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Vivek Nair@NCSU</title>
     
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="css/pygment_trac.css">
     <script src="js/scale.fix.js"></script>
     <script>
