--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
       <header>
         <h1 class="header">Vivek Nair</h1>
         <p style="color:#66D9EF">vivekaxl@gmail.com</p>
+	<p style="font-size: 18px;">
+    <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" style="color: #FD971F;font-size: 15px;">CV</a> <br>
+	<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" style="color: #FD971F;font-size: 15px;">Google-Scholar</a> <br>
+	<a href="https://www.linkedin.com/in/vivekaxl" style="color: #FD971F;font-size: 15px;">Linkedin</a> <br>
+	<a href="https://github.com/vivekaxl" style="color: #FD971F;font-size: 15px;">Github</a>
+</p>
       </header>
       <section>
 
@@ -52,7 +58,7 @@
 	<a href="http://menzies.us">Dr. Tim Menzies</a> was my advisor.
   I was previously a Reseach Intern at Microsoft Research, and Lexisnexis Risk Solutions.
 	Before that a Software Engineer at Samsung Mobile working in Memory & File System.
-  My <a href="assets/VivekNair-Resume.pdf">Resume</a>.</p>
+  </p>
 	      <p style="text-align: center; color: #A6E22E">
 		      I will be joining Facebook as a Research Scientist in 2019.</p>
 
