--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <h1 class="header">Vivek Nair</h1>
         <p style="color:#66D9EF">vivekaxl@gmail.com</p>
 	<p style="font-size: 18px;">
-    <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank" style="color: #FD971F;font-size: 15px;">CV</a> <br>
-	<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank"  style="color: #FD971F;font-size: 15px;">Google-Scholar</a> <br>
-	<a href="https://www.linkedin.com/in/vivekaxl" target="_blank"  style="color: #FD971F;font-size: 15px;">Linkedin</a> <br>
-	<a href="https://github.com/vivekaxl" target="_blank" style="color: #FD971F;font-size: 15px;">Github</a>
+    <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank"  style="color: #F92672;font-size: 20px;">CV</a> <br>
+	<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en"  style="color: #F92672;font-size: 20px;>Google-Scholar</a> <br>
+	<a href="https://www.linkedin.com/in/vivekaxl" target="_blank"   style="color: #F92672;font-size: 20px;>Linkedin</a> <br>
+	<a href="https://github.com/vivekaxl" target="_blank"  style="color: #F92672;font-size: 20px;>Github</a>
 </p>
       </header>
       <section>
