--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Vivek Nair</h1>
-        <p style="color:#66D9EF">vivekaxl@gmail.com</p>
+        <p style="color:#F92672">vivekaxl@gmail.com</p>
 	<p style="font-size: 18px;">
     <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank"  style="color: #F92672;font-size: 20px;">CV</a> <br>
 	<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en"  style="color: #F92672;font-size: 20px;>Google-Scholar</a> <br>
