--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/pygment_trac.css">
     <script src="js/scale.fix.js"></script>
     <script>
@@ -45,7 +46,7 @@
         <h1 class="header">Vivek Nair</h1>
         <p style="color:#F92672">vivekaxl@gmail.com</p>
 	<p style="font-size: 18px;">
-    <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank"  style="color: #F92672;font-size: 18px;">CV</a> <br>
+        <i class="fas fa-file"></i><a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank"  style="color: #F92672;font-size: 18px;">CV</a> <br>
 	<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en"  style="color: #F92672;font-size: 18px;">Google-Scholar</a> <br>
 	<a href="https://www.linkedin.com/in/vivekaxl" target="_blank"   style="color: #F92672;font-size: 18px;">Linkedin</a> <br>
 	<a href="https://github.com/vivekaxl" target="_blank"  style="color: #F92672;font-size: 18px;">Github</a>
