--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="header">Vivek Nair</h1>
         <p style="color:#F92672">vivekaxl@gmail.com</p>
 	<p style="font-size: 18px;">
-        <i class="fas fa-file"></i><a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank"  style="color: #F92672;font-size: 18px;">CV</a> <br>
+        <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank"  style="color: #F92672;font-size: 18px;">CV</a> <br>
 	<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en"  style="color: #F92672;font-size: 18px;">Google-Scholar</a> <br>
 	<a href="https://www.linkedin.com/in/vivekaxl" target="_blank"   style="color: #F92672;font-size: 18px;">Linkedin</a> <br>
 	<a href="https://github.com/vivekaxl" target="_blank"  style="color: #F92672;font-size: 18px;">Github</a>
