--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/pygment_trac.css">
     <script src="js/scale.fix.js"></script>
@@ -45,12 +46,15 @@
       <header>
         <h1 class="header">Vivek Nair</h1>
         <p style="color:#FFE792">vivekaxl@gmail.com</p>
-	<p style="font-size: 18px;">
-        <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank"  style="color: #FD971F;font-size: 18px;">CV</a> <br>
-	<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #FD971F;font-size: 18px;">Google-Scholar</a> <br>
-	<a href="https://www.linkedin.com/in/vivekaxl" target="_blank"   style="color: #FD971F;font-size: 18px;">Linkedin</a> <br>
-	<a href="https://github.com/vivekaxl" target="_blank"  style="color: #FD971F;font-size: 18px;">Github</a>
-</p>
+	<p style="text-align: center;font-size: 18px;">
+		<a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fas fa-file"></i></a>
+		<a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-linkedin"></i></a>
+		<a href="https://github.com/vivekaxl" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-github"></i></a>
+		<a href="https://twitter.com/vivekaxl" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-twitter"></i></a>
+		<a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-quora"></i></a>
+		<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #FD971F;font-size: 7px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+		<a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-facebook"></i></a>
+	</p>
       </header>
       <section>
 
