--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <h1 class="header">Vivek Nair</h1>
         <p style="color:#FFE792">vivekaxl@gmail.com</p>
 	<p style="text-align: center;font-size: 18px;">
-		<a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fas fa-file"></i></a>
-		<a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-linkedin"></i></a>
-		<a href="https://github.com/vivekaxl" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-github"></i></a>
-		<a href="https://twitter.com/vivekaxl" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-twitter"></i></a>
-		<a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-quora"></i></a>
-		<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #FD971F;font-size: 6.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
-		<a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #FD971F;font-size: 18px;"><i class="fab fa-facebook"></i></a>
+		<a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #FD971F;font-size: 22px;"><i class="fas fa-file"></i></a>
+		<a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
+		<a href="https://github.com/vivekaxl" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-github"></i></a>
+		<a href="https://twitter.com/vivekaxl" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-twitter"></i></a>
+		<a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-quora"></i></a>
+		<a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #FD971F;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+		<a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-facebook"></i></a>
 	</p>
       </header>
       <section>
