--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 <h3>Projects</h3>
 <h4>Performance Prediction of Configurable System</h4>
   <p>
-  As a part of my Ph.D., I am exploring ways to easily optimize non-functional properties (e.g. runtime, latency etc.)
+  As a part of my Ph.D., I explored ways to easily optimize non-functional properties (e.g. runtime, latency etc.)
   of highly configurable systems. Techniques like spectral learning and rank based learning is used to learn features of the configurations. 
   <ul> 
-    <li> Vivek Nair, R. Krishna, T. Menzies, P. Jamshidi. <a href="https://arxiv.org/pdf/1803.03900" target="_blank"  style="font-size:15px;">Transfer Learning with Bellwethers to find Good Configurations.</a> (Submitted 2018)</li>
+    <li> Vivek Nair, R. Krishna, T. Menzies, P. Jamshidi. <a href="https://arxiv.org/pdf/1803.03900" target="_blank"  style="font-size:15px;">Transfer Learning with Bellwethers to find Good Configurations.</a> (Submitted 2019)</li>
     <li> Vivek Nair, Z. Yu, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/abs/1705.05018" target="_blank"  style="font-size:15px;">Finding Faster Configurations using FLASH.</a> TSE 2018. </li>
-    <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/pdf/1702.05701.pdf" target="_blank"  style="font-size:15px;">Using Bad Learners to find Good Configurationsi</a> FSE 2018. </li>
+    <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/pdf/1702.05701.pdf" target="_blank"  style="font-size:15px;">Using Bad Learners to find Good Configurationsi</a> FSE 2017. </li>
     <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/abs/1701.08106" target="_blank" style="font-size:15px;">Faster  Discovery  of  Faster  System  Configurations  with  Spectral Learning</a> ASE 2017. </li>
   </ul
   </p>
@@ -88,8 +88,9 @@
   eliminate `less promising' configurations and hence searches only the spotlight region of the configuration space.
     
     <ul>
+      
+      <li> C.J. Hsu, <b>Vivek Nair</b>, T. Menzies, and V. W. Freeh. <a href="https://tiny.cc/vivek_2018d" target="_blank"  style="font-size:15px;">Scout: An Experienced Guide to Find the Best Cloud Configuration.</a> (Submitted 2019).</li>
       <li> C.J. Hsu, <b>Vivek Nair</b>, V. W. Freeh, T. Menzies. <a href="http://tiny.cc/vivek_2018a" target="_blank"  style="font-size:15px;">Low-Level Augmented Bayesian Optimization for Finding theBest Cloud VM.</a> ICDCS 2018.</li>
-      <li> C.J. Hsu, <b>Vivek Nair</b>, T. Menzies, and V. W. Freeh. <a href="https://tiny.cc/vivek_2018d" target="_blank"  style="font-size:15px;">Scout: An Experienced Guide to Find the Best Cloud Configuration.</a> (Submitted 2018).</li>
       <li> C.J. Hsu*, <b>Vivek Nair*</b>, V. W. Freeh, T. Menzies. <a href="https://tiny.cc/vivek_2018e" target="_blank"  style="font-size:15px;"> Micky:  A  Cheaper  Alternative  for  Selecting  Cloud  Instances.</a> IEEE CLOUD 2018.</li>
     </ul>
   </p>  
