--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ p, ul, ol, table, dl {
     </nav>
 
     <!-- Navbar on small screens (Hidden on medium and large screens) -->
-    <div class="w3-top w3-hide-large w3-hide-medium " id="navbar">
+    <div class="w3-hide-large w3-hide-medium " id="navbar">
       <a href="#default" id="logo">Vivek Nair</a>
       <div id="navbar-right" id="blah">
           <!-- <p style="text-align: center;font-size: 18px;"> -->
