--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@ p, ul, ol, table, dl {
 .content {
   max-width: 900px;
   margin: auto;
-  border: 1px solid gray;
+  border: 1px solid #fce497;
+  background-color: black;
+}
+.w3-black, .w3-hover-black:hover {
+    color: #fff!important;
+    background-color: #1C1F24!important;
 }
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
