--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h4 {
   font-size: 20px;
 }
 a {
-  color:#FD971F;
+  color:#fa625f;
   font-weight:500;
   text-decoration:none;
   font-size: 17px;
@@ -111,13 +111,13 @@ p, ul, ol, table, dl {
       <a href="#default" id="logo">Vivek Nair</a>
       <div id="navbar-right" id="blah">
           <!-- <p style="text-align: center;font-size: 18px;"> -->
-          <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #FD971F;font-size: 22px;"><i class="fas fa-file"></i></a>
-          <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/vivekaxl" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-github"></i></a>
-          <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-quora"></i></a>
-          <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #FD971F;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
-          <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #FD971F;font-size: 23px;"><i class="fab fa-facebook"></i></a>
+          <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #fa625f;font-size: 22px;"><i class="fas fa-file"></i></a>
+          <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/vivekaxl" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-github"></i></a>
+          <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-quora"></i></a>
+          <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #fa625f;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+          <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-facebook"></i></a>
           <!-- </p> -->
       </div>
     </div>
@@ -138,7 +138,7 @@ p, ul, ol, table, dl {
       I was previously a Reseach Intern at Microsoft Research, and Lexisnexis Risk Solutions.
       Before that a Software Engineer at Samsung Mobile working in Memory & File System.
       </p>
-            <p style="text-align: center; color: #A6E22E">
+            <p style="text-align: center; color: #7dce94">
               I will be joining Facebook as a Research Scientist in 2019.</p>
 
     <h3>Projects</h3>
