--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ p, ul, ol, table, dl {
 }
 .w3-black, .w3-hover-black:hover {
     color: #fff!important;
-    background-image: url(assets/images/water.jpeg);
+    background-color: #1C1F24!important;
 }
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
