--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ p, ul, ol, table, dl {
   font-size: 17px;
   font-family: "Montserrat";
   color: #efefef;
+  text-align: justify;
 }
 .content {
   max-width: 900px;
