--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ p, ul, ol, table, dl {
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
     <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
       <h1>Vivek Nair</h1>
-      <p style="color:#FFE792">vivekaxl@gmail.com</p>
+      <p style="color:#FFE792; text-align:center">vivekaxl@gmail.com</p>
       <p style="text-align: center;font-size: 18px;">
       <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #fa625f;font-size: 22px;"><i class="fas fa-file"></i></a>
       <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
