--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ a {
 p, ul, ol, table, dl {
   font-size: 17px;
   font-family: "Montserrat";
-  color: #efefef;
+  color: #C3F73A;
   text-align: justify;
 }
 .content {
@@ -167,7 +167,7 @@ p, ul, ol, table, dl {
         </ul>
       </p>  
       
-    <h4>SWAY - {S}ampling {WAY}</h4>
+    <h4>SWAY - Sampling Way</h4>
       <p>
       This is a joint project with my colleague, <a href="http://ginfung.github.io/" target="_blank" >Jianfeng Chen</a>. We wanted to develop
       fast searching techniques, which can be used to optimize problems rather quickly. We have tried the searchers on various 
