--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ a {
 p, ul, ol, table, dl {
   font-size: 17px;
   font-family: "Montserrat";
-  color: #C3F73A;
+  color: #dfe0db;
   text-align: justify;
 }
 .content {
