--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ h4 {
   font-size: 20px;
 }
 a {
-  color:#7dce94;
+  color:#9aeab1;
   font-weight:500;
   text-decoration:none;
   font-size: 17px;
