--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ p, ul, ol, table, dl {
         <li> J. Chen, Vivek Nair, T. Menzies. <a href="https://arxiv.org/abs/1608.07617" style="font-size:15px;" target="_blank" >Beyond Evolutionary Algorithms for Search-based Software Engineering</a>, IST 2017. </li>
         <li> J. Chen, Vivek Nair, Rahul Krishna, T. Menzies. <a href="https://arxiv.org/pdf/1701.07950.pdf" target="_blank"  style="font-size:15px;">" Sampling" as a Baseline Optimizer for Search-based Software Engineering</a>. TSE 2018. </li>
       </ul>  
-     <b style="color:#d4d4dc">Miscellaneous: </b>
+     <b style="color:#d4d4dc; font-size:17px">Miscellaneous: </b>
      <ul>
        <li>W. Fu, Vivek Nair, T. Menzies. <a href="https://arxiv.org/pdf/1609.02613" target="_blank"  style="font-size:15px;">Why is Differential Evolution Better than Grid Search for Tuning Defect Predictors?</a> (Submitted 2018)</li>
        <li>Vivek Nair, A. Agrawal, J. Chen, W. Fu, G. Mathew, T. Menzies, L. Minku, M. Wagner, Z. Yu. <a href="https://arxiv.org/pdf/1801.10241" target="_blank"  style="font-size:15px;">Data-Driven Search-based Software Engineering.</a> MSR 2018</li>
