--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@ p, ul, ol, table, dl {
     </div>
     
         
-    <p>I received my Ph.D. in Computer Science from North Carolina State University in 2018, where 
+    <p>I am a Research Scientist at Facebook in Seattle. I received my Ph.D. in Computer Science from North Carolina 
+        State University in 2018, where 
       <a href="http://menzies.us" target="_blank" >Dr. Tim Menzies</a> was my advisor.
       I was previously a Reseach Intern at Microsoft Research, and Lexisnexis Risk Solutions.
       Before that a Software Engineer at Samsung Research Institute - Noida working in Memory & File System.
